fixing overflow issue

--- a/packages/components/src/VirtualizedList/CellTitle/CellTitle.scss
+++ b/packages/components/src/VirtualizedList/CellTitle/CellTitle.scss
@@ -89,7 +89,9 @@ $tc-list-title-icon-size: $svg-rg-size !default;
 	&:global(.ally-focus-within) {
 		:global(.tc-list-title .cell-title-actions) {
 			opacity: 1;
-			width: auto;
+			button {
+				width: auto;
+			}
 			transition: opacity 0.15s ease-in;
 		}
 	}
