--- a/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
+++ b/packages/components/src/VirtualizedList/CellTitle/CellTitleActions.scss
@@ -16,7 +16,9 @@ $tc-list-title-dropup-menu-triangle: '\25bc';
 	.cell-title-actions {
 		background: linear-gradient(to right, rgba(255, 255, 255, 0), $tc-list-row-hover-bg $padding-large);
 		opacity: 0;
-		width: 0;
+		button {
+			width: 0;
+		}
 
 		&:not(:last-child):after {
 			content: '|';
